--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lama Dev Chat App</title>
+    <title>Real chat</title>
   </head>
   <body>
     <div id="root"></div>
