--- a/index.html
+++ b/index.html
@@ -2,11 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" href="favIcon/favicon.ico" type="image/x-icon" />
+
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700&display=swap"
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favIcon//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favIcon//favicon-16x16.png"
+    />
+
+    <link rel="apple-touch-icon" href="favIcon/apple-touch-icon.png" />
+
+    <link rel="manifest" href="favIcon/site.webmanifest" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real chat</title>
   </head>
